--- a/django-jwt/templates/main.html
+++ b/django-jwt/templates/main.html
@@ -10,8 +10,14 @@
     <!-- 로그인 여부 확인 -->
     <div id="auth-button">
         <!-- 로그인 상태에 따라 버튼 표시 -->
+        {% if user.is_authenticated %}
+        <form action="{% url 'oidc_logout' %}" method="post">
+          {% csrf_token %}
+          <input type="submit" value="logout">
+        </form>
+      {% else %}
         <a href="{% url 'oidc_authentication_init' %}"><button id="login-btn">Keycloak으로 시작</button></a>
-        <button id="logout-btn" onclick="logout()">로그아웃</button>
+      {% endif %}
     </div>
 
     <!-- 게시판으로 이동 버튼 -->
