--- a/django-jwt/templates/board.html
+++ b/django-jwt/templates/board.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>게시판</title>
+    {% if not user.is_authenticated %}
+    <script>
+        alert("로그인하세요");
+        window.location.href = "/";
+    </script>
+    {% endif %}
 </head>
 <body>
-    <h2>게시판입니다.</h2>
+    {% if user.is_authenticated %}
+        <h2>게시판입니다.</h2>
+    {% endif %}
+
     <!--뒤로가기 누르면 main으로 이동-->
     <a href="/"><button>뒤로가기</button></a>
 </body>
