--- a/django-jwt/templates/board.html
+++ b/django-jwt/templates/board.html
@@ -3,18 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>게시판</title>
-    {% if not user.is_authenticated %}
-    <script>
-        alert("로그인하세요");
-        window.location.href = "/";
-    </script>
-    {% endif %}
 </head>
 <body>
-    <!--인증된 사용자에게 열람 허용-->
-    {% if user.is_authenticated %}
         <h2>게시판입니다.</h2>
 
+        <a href="/post"><button id="post-btn">글쓰기</button></a>
         <!-- 검색창 -->
         <form method="get" action="">
             <input type="text" name="q" value="{{ query }}" placeholder="검색할 키워드를 입력하세요">
@@ -54,11 +47,7 @@
             <p>게시글이 없습니다.</p>
         {% endfor %}
 
+        <!--뒤로가기 누르면 main으로 이동-->
         <a href="/"><button>뒤로가기</button></a>
-    {% endif %}
-
-    <!--뒤로가기 누르면 main으로 이동-->
-    <a href="/"><button>뒤로가기</button></a>
-
 </body>
 </html>
