--- a/django-jwt/templates/post.html
+++ b/django-jwt/templates/post.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>게시글 작성 페이지</title>
+    <!--로그인 여부 확인-->
     {% if not user.is_authenticated %}
     <script>
         alert("로그인한 사용자만 작성가능합니다");
